--- a/lab10.html
+++ b/lab10.html
@@ -49,7 +49,7 @@
                                 distribution given the current state and odometry input. Next, in the update step, sensor measurements are incorporated
                                 into the system by calculating the likelihood of said measurements given each state. The combination of the prediction 
                                 and update steps outputs the posterior state distribution and thus the most probable state of the robot. The algorithm
-                                is broken down into the four sections below for simplicity of implementation. I referred to Anya Prabowo's website
+                                is broken down into the five sections below for simplicity of implementation. I referred to Anya Prabowo's website
                                 for the Python code used in this lab. 
                             </p>    
                               <img src="assets/img/Bayes_filter.png" alt="Bayes Filter" width=90% height=auto/>
@@ -65,26 +65,41 @@
                                   and outputs u, which represents the control input in the Bayes filter algorithm. u is a tuple that consists of
                                   the rotation 1, translation, and rotation 2 components which can be calculated using the equations below from class:
                             </p>   
-                               <img src="assets/img/compute_control.png" alt="Bayes Filter" width=90% height=auto/>
+                               <img src="assets/img/compute_control.png" alt="Bayes Filter" width=50% height=auto/>
                               <script src="https://gist.github.com/tiffanyguo8/7444f92072ca7e86b7335dea432b810e.js"></script>
                         </a>    
                         </div>       
-                            <br><br>
+                            <br>
                         <div class="list-group">
                           <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">Odometry Motion Model</h5>
                             </div>
-                            <p class="mb-1">The <code> odometry_motion_model() </code> function calculates the state transition probability, which is the likelihood
+                            <p class="mb-1">The <code> odom_motion_model() </code> function calculates the state transition probability, which is the likelihood
                                 that the robot is in the curr_pose given the prev_pose and control input u. The equation for transition probability is given below as
                                 the product of three gaussians, each of which takes mu, x, and sigma values and outputs the relative likelihood of x being in a Normal Distribution 
                                 with mean mu and standard deviation sigma.
                             </p>
-                              <img src="assets/img/compute_control.png" alt="Bayes Filter" width=90% height=auto/>
+                              <img src="assets/img/odometry_motion_model.png" alt="Odometry Motion Model" width=70% height=auto/>
                               <script src="https://gist.github.com/tiffanyguo8/264d2fe72a352cf3e48a0da10544fd8c.js"></script>
                         </a>    
                         </div>    
-                        
+                            <br>
+                        <div class="list-group">
+                          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                            <div class="d-flex w-100 justify-content-between">
+                              <h5 class="mb-1">Prediction Step</h5>
+                            </div>
+                            <p class="mb-1">This step updates the bel_bar probability based on the cur_odom and prev_odom inputs. First, the control
+                                input is updated by calling compute_control(). Next, I loop through the previous and current states and call 
+                                odom_motion_model() to calculate the probability of being in each state. I then multiplied the probability of each state
+                                by the previous belief at that state and normalized the distribution so sum to 1. If the previous belief for any state
+                                is under a threshold of 0.0001, the calculations for that state are negligable and thus skipped to increase efficiency. 
+                            </p>    
+                              <script src="https://gist.github.com/tiffanyguo8/0528605d476824c42f5ac619d5d68eaa.js"></script>
+                        </a>    
+                        </div> 
+                            <br>
                         <div class="list-group">
                           <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
                             <div class="d-flex w-100 justify-content-between">
@@ -93,9 +108,10 @@
                             <p class="mb-1">In order to map out the entire lab room, I placed my robot at 5 marked locations in our lab classroom and rotated it
                                 using PID control while taking ToF and IMU measurements. Below are the generated maps using polar coordinates and graphss of the raw ToF and IMU data for reference. 
                             </p>    
+                              <script src="https://gist.github.com/tiffanyguo8/0528605d476824c42f5ac619d5d68eaa.js"></script>
                         </a>    
                         </div> 
-                        
+                            <br>
                         <div class="list-group">
                           <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
                             <div class="d-flex w-100 justify-content-between">
