--- a/lab10.html
+++ b/lab10.html
@@ -105,7 +105,7 @@
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">Sensor Model</h5>
                             </div>
-                            <p class="mb-1">The sensor_model() function calculates the probability of obtaining certain sensor readings given the state of the robot. 
+                              <p class="mb-1">The <code> sensor_model() </code> function calculates the probability of obtaining certain sensor readings given the state of the robot. 
                                 It does this by calculating a Gaussian using the true observation (since this is a simulation, we know what the robot should sense) as
                                 the mean and sensor_sigma as the standard deviation. The function returns an array of the calculated results for the measurement,
                                 which consists of 18 data points. 
@@ -125,6 +125,19 @@
                                 and normalized so that the total probability is 1. 
                             </p>  
                               <script src="https://gist.github.com/tiffanyguo8/30dca0ccbc9310513cf4ae77323d6844.js"></script>
+                        </a>    
+                        </div> 
+                            <br>
+                        <div class="list-group">
+                          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                            <div class="d-flex w-100 justify-content-between">
+                              <h5 class="mb-1">Simulation</h5>
+                            </div>
+                            <p class="mb-1">Here are the simulations of the robot's localization while moving in a predetermined trajectory
+                                and the corresponding output. The green line shows the robot's actual ground truth position, the red line is 
+                                estimation based on odometry/sensor values, and the blue line is the Bayes filter estimation of the position.  
+                            </p>  
+                              
                         </a>    
                         </div> 
                         
