--- a/lab10.html
+++ b/lab10.html
@@ -137,7 +137,8 @@
                                 and the corresponding output. The green line shows the robot's actual ground truth position, the red line is 
                                 estimation based on odometry/sensor values, and the blue line is the Bayes filter estimation of the position.  
                             </p>  
-                              
+                              <iframe width="560" height="315" src="https://www.youtube.com/embed/fG0snO9WOvQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                              <script src="https://gist.github.com/tiffanyguo8/2f85c475fa6ea2e056f0db1a464e38a3.js"></script>
                         </a>    
                         </div> 
                         
