--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <a class="dropdown-item" href=lab8.html>Lab 8</a>
             <a class="dropdown-item" href=lab9.html>Lab 9</a>
             <a class="dropdown-item" href=lab10.html>Lab 10</a>
+            <a class="dropdown-item" href=lab10.html>Lab 11</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#about">About me</a>
           </div>
@@ -158,6 +159,11 @@
                     <div class="col-lg-4 col-sm-6">
                         <a class="nav-link" href="lab10.html"> 
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab10.jpg" alt="..." />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="nav-link" href="lab11.html"> 
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab11.jpg" alt="..." />
                         </a>
                     </div>
                 </div>
