--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <a class="dropdown-item" href=lab8.html>Lab 8</a>
             <a class="dropdown-item" href=lab9.html>Lab 9</a>
             <a class="dropdown-item" href=lab10.html>Lab 10</a>
-            <a class="dropdown-item" href=lab10.html>Lab 11</a>
+            <a class="dropdown-item" href=lab11.html>Lab 11</a>
+            <a class="dropdown-item" href=lab12.html>Lab 12</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#about">About me</a>
           </div>
@@ -163,7 +164,12 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="nav-link" href="lab11.html"> 
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab11.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab10.jpg" alt="..." />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="nav-link" href="lab12.html"> 
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab10.jpg" alt="..." />
                         </a>
                     </div>
                 </div>
