--- a/lab11.html
+++ b/lab11.html
@@ -75,75 +75,24 @@
                         <div class="list-group">
                           <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
                             <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">Odometry Motion Model</h5>
+                              <h5 class="mb-1">Localization</h5>
                             </div>
-                            <p class="mb-1">The <code> odom_motion_model() </code> function calculates the state transition probability, which is the likelihood
-                                that the robot is in the curr_pose given the prev_pose and control input u. The equation for transition probability is given below as
-                                the product of three gaussians, each of which takes mu, x, and sigma values and outputs the relative likelihood of x being in a Normal Distribution 
-                                with mean mu and standard deviation sigma.
+                            <p class="mb-1">Using the new localization code, I placed my robot at the various marked poses in the lab and ran the routine
+                                to take 18 sensor measurements and predict the robot's location. The results for each location are as follows:
                             </p>
-                              <img src="assets/img/odometry_motion_model.png" alt="Odometry Motion Model" width=70% height=auto/>
-                              <script src="https://gist.github.com/tiffanyguo8/264d2fe72a352cf3e48a0da10544fd8c.js"></script>
+                              <p (0,0) </p>
+                              <img src="assets/img/lab11/localization_00_green.png" alt="Localization" width=49% height=auto/>
+                              <img src="assets/img/lab11/localization_00_blue.png" alt="Localization" width=49% height=auto/>
+                              <p (-3,-2) and (0,3) </p>
+                              <img src="assets/img/lab11/localization_-3-2.png" alt="Localization" width=49% height=auto/>
+                              <img src="assets/img/lab11/localization_03.png" alt="Localization" width=49% height=auto/>
+                              <p (5,-3) </p>
+                              <img src="assets/img/lab11/localization_5-3.png" alt="Localization" width=49% height=auto/>
+                              <p (5,3) </p>
+                              <img src="assets/img/lab11/localization_53.png" alt="Localization" width=49% height=auto/>
+                              <img src="assets/img/lab11/localization_53_2.png" alt="Localization" width=49% height=auto/>
                         </a>    
                         </div>    
-                            <br>
-                        <div class="list-group">
-                          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
-                            <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">Prediction Step</h5>
-                            </div>
-                            <p class="mb-1">This step updates the bel_bar probability based on the cur_odom and prev_odom inputs. First, the control
-                                input is updated by calling compute_control(). Next, I loop through the previous and current states and call 
-                                odom_motion_model() to calculate the probability of being in each state. I then multiplied the probability of each state
-                                by the previous belief at that state and normalized the distribution so sum to 1. If the previous belief for any state
-                                is under a threshold of 0.0001, the calculations for that state are negligable and thus skipped to increase efficiency. 
-                            </p>    
-                              <script src="https://gist.github.com/tiffanyguo8/0528605d476824c42f5ac619d5d68eaa.js"></script>
-                        </a>    
-                        </div> 
-                            <br>
-                        <div class="list-group">
-                          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
-                            <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">Sensor Model</h5>
-                            </div>
-                              <p class="mb-1">The <code> sensor_model() </code> function calculates the probability of obtaining certain sensor readings given the state of the robot. 
-                                It does this by calculating a Gaussian using the true observation (since this is a simulation, we know what the robot should sense) as
-                                the mean and sensor_sigma as the standard deviation. The function returns an array of the calculated results for the measurement,
-                                which consists of 18 data points. 
-                            </p>    
-                              <script src="https://gist.github.com/tiffanyguo8/8fe2b7109eee03bc5b7cbc42ab6be5da.js"></script>
-                        </a>    
-                        </div> 
-                            <br>
-                        <div class="list-group">
-                          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
-                            <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">Update Step</h5>
-                            </div>
-                            <p class="mb-1">In the update step, the belief that the robot is in each state is calculated given all past measurements
-                                and control inputs. I iterate through each potential current position and multiply each state's belief by the probability
-                                of obtaining the current sensor readings given the said position. The belief value for each pose is updated accordingly 
-                                and normalized so that the total probability is 1. 
-                            </p>  
-                              <script src="https://gist.github.com/tiffanyguo8/30dca0ccbc9310513cf4ae77323d6844.js"></script>
-                        </a>    
-                        </div> 
-                            <br>
-                        <div class="list-group">
-                          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
-                            <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">Simulation</h5>
-                            </div>
-                            <p class="mb-1">Here are the simulations of the robot's localization while moving in a predetermined trajectory
-                                and the corresponding output. The green line shows the robot's actual ground truth position, the red line is 
-                                estimation based on odometry/sensor values, and the blue line is the Bayes filter estimation of the position.  
-                            </p>  
-                        </a>    
-                        </div> 
-                         <iframe width="560" height="315" src="https://www.youtube.com/embed/fG0snO9WOvQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/YnliROMX9lk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>      
-                        <script src="https://gist.github.com/tiffanyguo8/2f85c475fa6ea2e056f0db1a464e38a3.js"></script>
                         <br>
                         <div class="d-grid gap-2">
                            <a class="btn btn-lg btn-primary" href="index.html">Home</a>
