--- a/lab11.html
+++ b/lab11.html
@@ -80,19 +80,19 @@
                             <p class="mb-1">Using the new localization code, I placed my robot at the various marked poses in the lab and ran the routine
                                 to take 18 sensor measurements and predict the robot's location. The results for each location are as follows:
                             </p>
-                              <p> (0,0)
+                              <p> (0,0) <br>
                               <img src="assets/img/lab11/localization_00_green.png" alt="Localization" width=49% height=auto/>
                               <img src="assets/img/lab11/localization_00_blue.png" alt="Localization" width=49% height=auto/>
                               </p>
-                              <p> (-3,-2) and (0,3) 
+                              <p> (-3,-2) and (0,3) <br>
                               <img src="assets/img/lab11/localization_-3-2.png" alt="Localization" width=49% height=auto/>
                               <img src="assets/img/lab11/localization_03.png" alt="Localization" width=49% height=auto/>
                               </p>
-                              <p> (5,3)
+                              <p> (5,3) <br>
                               <img src="assets/img/lab11/localization_53.png" alt="Localization" width=49% height=auto/>
                               <img src="assets/img/lab11/localization_53_2.png" alt="Localization" width=49% height=auto/>
                               </p>
-                              <p> (5,-3)
+                              <p> (5,-3) <br>
                               <img src="assets/img/lab11/localization_5-3.png" alt="Localization" width=49% height=auto/>
                               </p>
                         </a>    
