--- a/lab11.html
+++ b/lab11.html
@@ -114,7 +114,15 @@
                                   are not extremely reliable and sometimes returned faulty values or sensed objects that weren't there which made it hard
                                   to accurately localize. 
                               </p>
-                              <p> In summary, my robot's ability to localize is inconsistent and unreliable. Even for the poses that yielded more or less
+                        </a>    
+                        </div>    
+                        <br>
+                        <div class="list-group">
+                          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                            <div class="d-flex w-100 justify-content-between">
+                              <h5 class="mb-1">Discussion</h5>
+                            </div>
+                              <p class="mb-1">In summary, my robot's ability to localize is inconsistent and unreliable. Even for the poses that yielded more or less
                                   successful localization results, I had to run many trials in order to achieve sufficiently valid data. I discussed this problem
                                   with the TAs in the lab and learned that it is not uncommon for ToF sensors to make unreliable measurements, especially at
                                   longer distances. I had the same problem in the stunt lab where my robot would often detect a wall without there being one
@@ -124,8 +132,9 @@
                                   with my ToF sensor despite its occasional flawed data readings due to the sheer volume of data I was collecting. In conclusion, 
                                   due to difficulty with my ToF sensors and getting accurate sensor readings, my robot was unable to consistently localize correctly. Therefore,
                                   I do not plan to use localization in Lab 12, as I am afraid it will not yield consistent and accurate results. 
+                            </p>   
                         </a>    
-                        </div>    
+                        </div>     
                         <br>
                         <div class="d-grid gap-2">
                            <a class="btn btn-lg btn-primary" href="index.html">Home</a>
